# SegmentAnything3D

./: .gitignore  README.md  buil_sam2C.sh  build_pointops.sh  compute_masks.sbatch  download_wrapper.py  pyproject.toml  requirements.txt  scannetsubset.sh  setup.py  test_pointops.py  visualise.ipynb
libs/pointops/: setup.py
scannet-preprocess/prepare_2d_data/: prepare_2d_data.py
src/SAM3D.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/automask/: __init__.py  amg.py  build_generator.py  efficient_automatic_mask_generator.py
src/automask/configs/generator/: sam_generator.yaml
src/automask/configs/generator/crop_mode/logger/: prs_logger.yaml
src/automask/configs/generator/prompt_mode/: efficient.yaml  efficient_masks.yaml
src/automask/configs/generator/prompt_mode/cluster_alg/: no_crops.yaml
src/automask/logger/: __init__.py  prs_logger.py
src/automask/util/: __init__.py  boxes.py  efficient_prompting.py  metrics.py  misc.py
src/sam3d/: __init__.py  format_for_is.py  format_gt.py  prepare_data_ist.py  sam3d.py  scannet_util.py  visualise_output.py
src/sam3d/configs/: sam1_vith.yaml  sam2_efficient_hiera_b+.yaml  sam2_efficient_hiera_t.yaml  sam2_hiera_b+.yaml  sam2_hiera_s.yaml  sam2_hiera_t.yaml
src/sam3d/configs/generator/: sam1_generator.yaml  sam2_efficient_generator.yaml  sam2_standard_generator.yaml
src/sam3d/configs/generator/crop_mode/: efficient.yaml  uniform.yaml
src/sam3d/configs/generator/crop_mode/cluster_alg/: hdbscan.yaml
src/sam3d/configs/generator/prompt_mode/: efficient.yaml  grid.yaml
src/sam3d/configs/generator/prompt_mode/cluster_alg/: sam3d.yaml  with_crops.yaml
src/sam3d/configs/generator/prompt_mode/logger/: prs_logger.yaml
src/sam3d/configs/model/: sam2.1_hiera_b+.yaml  sam2.1_hiera_l.yaml  sam2.1_hiera_s.yaml  sam2.1_hiera_t.yaml  sam_vit_h.yaml
src/sam3d/data_util/: format_for_is.py  format_gt.py  prepare_data_ist.py
src/sam3d/evaluation/: evaluate_instance_seg.py  util_3d.py
src/sam3d/util/: __init__.py
